# historical-marine-weather-gui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.MD  THIRD_PARTY_NOTICES.md  TODO.md
.githooks/: README.md  install.sh  pre-commit
.github/actions/install-linux-dependencies/: action.yml
.github/workflows/: ci.yml
hmw-cli/: Cargo.toml  build.rs
hmw-cli/src/: download_raw_imma.rs  generate_lattice.rs  main.rs  process_imma.rs
hmw-data/: Cargo.toml
hmw-data/src/: error.rs  lib.rs  read.rs  write.rs
hmw-data/src/histogram/: date_time_histogram.rs  direction.rs  directional_histogram.rs  mod.rs  stats.rs
hmw-data/src/histogram/bucketing/: beaufort.rs  douglas_waves.rs  mod.rs
hmw-data/src/types/: mod.rs  predicate_projection.rs  waves_and_swell.rs  weather_observation.rs  wind.rs
hmw-data/tests/: histogram.rs  write_read.rs
hmw-geo/: Cargo.toml
hmw-geo/src/: geohash_lattice.rs  lib.rs  utils.rs
hmw-gui/: Cargo.toml  build.rs
hmw-gui/.debug/: README.md
hmw-gui/assets/: earth_map.ktx2  lattice.json
hmw-gui/src/: assets.rs  collapsable.rs  collection.rs  consts.rs  controll_bar.rs  loader.rs  main.rs  types.rs  utils.rs
hmw-gui/src/app/: deamon.rs  main_window.rs  mod.rs  persistant_state.rs
hmw-gui/src/data_file_manager/: mod.rs
hmw-gui/src/earth_map/: map.rs  mod.rs
hmw-gui/src/earth_map/pipelines/: data.rs  lattice_data.rs  lattice_pepiline.rs  mod.rs  pipeline.rs  spheroid.rs  uniforms.rs
hmw-gui/src/earth_map/pipelines/shaders/: earth.wgsl  lattice.wgsl
hmw-gui/src/earth_map/program/: consts.rs  controller.rs  mod.rs  primitive.rs  state.rs  types.rs  widget.rs
hmw-gui/src/weather_summary_collection/: data_display_collection.rs  messages.rs  mod.rs  screen.rs  state.rs
hmw-gui/src/weather_summary_details/: details.rs  mod.rs
hmw-gui/src/weather_summary_form/: epoch_selector.rs  form.rs  geo_list.rs  mod.rs  months_selector.rs  name.rs  weather_type_selector.rs
hmw-gui/src/weather_summary_list/: mod.rs  types.rs  weather_list.rs
hmw-gui/src/weather_summary_stats/: charts.rs  doy_coord.rs  mod.rs  view.rs
hmw-gui/src/widgets/: animated_ellipsis.rs  double_ended_slider.rs  mod.rs  tooltip.rs
hmw-gui/src/windrose/: mod.rs  utils.rs  wind_rose.rs
hmw-gui/src/windrose/rendering/: mod.rs  pipeline.rs  program.rs  sector.rs  uniforms.rs  widget.rs
hmw-gui/src/windrose/rendering/shaders/: copy.wgsl  gridlines.wgsl  rose.wgsl
hmw-parquet/: Cargo.toml
hmw-parquet/src/: lib.rs  reader.rs  traits.rs  writer.rs
imma-files/: Cargo.toml
imma-files/src/: download_files.rs  error.rs  lib.rs  read_source.rs  remote_files.rs  source.rs
imma-files/tests/: remote_files.rs
imma-files/tests/data/: final-untrim.html  nrt-monthly.html
imma-parser/: Cargo.toml
imma-parser/src/: attm_types.rs  lib.rs  repr.rs  types.rs
imma-parser/src/arrow/: convert.rs  mod.rs  serialize.rs
imma-parser/src/iter/: arrow.rs  mod.rs  read.rs
imma-parser/src/parsers/: attm.rs  attm_c98.rs  date_time.rs  error.rs  generic.rs  meta.rs  mod.rs  position.rs  ship.rs  weather.rs
imma-parser/src/traits/: date_time.rs  mod.rs  position.rs  waves.rs  wind.rs
resources/: example_collection.json
