[workspace]
resolver = "3"

members = [
    "imma-parser",
    "hmw-cli",
    "imma-files", 
    "hmw-parquet", 
    "hmw-geo", 
    "hmw-data",
    "hmw-gui",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
async-channel = "2.5.0"
async-stream = "0.3.6"
axum = "0.8.8"
arrow = { version = "57.3.0" }
arrow_convert = { version = "0.11.4", features = ["tinystr"] }
bytemuck = "1.25.0"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["cargo", "string"] }
colored = "3.1.1"
colorous = "1.0.16"
console = "0.16.3"
datafusion = { version = "52.4.0", default-features = false, features = ["parquet"] }
directories = "6.0.0"
either = "1.15.0"
flate2 = "1.1.9"
futures = "0.3.32"
futures-util = "0.3.32"
geo = "0.32.0"
geohash = "0.13.1"
glam = { version = "0.32.1", features = ["bytemuck", "serde"] }
hexasphere = "18.0.0"
human_format = "1.2.1"
iced = { version = "0.14.0", default-features = false, features = ["advanced", "canvas", "image", "lazy", "svg", "tokio", "wgpu", "x11", "wayland"] }
iced_aksel = "0.3.0"
indicatif = "0.18.4"
itertools = "0.14.0"
ktx2 = "0.4.0"
map_3d = "0.1.5"
ndhistogram = "0.11.0"
nom = { version = "8.0.0", features = ["alloc"] }
ordered-float = "5.3.0"
parquet = { version = "57.3.0", features = ["async"] }
rand = { version = "0.10.0", features = ["alloc"] }
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["blocking", "stream"] }
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal"] }
rust-embed = "8.11.0"
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shapefile = { version = "0.8.0", features = ["geo-types", "geo-traits"] }
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
tar = "0.4.45"
tempfile = "3.27.0"
thiserror = "2.0.18"
tinystr = { version = "0.8.2", features = ["serde"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["fs"] }
tokio-util = { version = "0.7.18", features = ["io", "io-util"] }
url = "2.5.8"
uuid = { version = "1.23.0", features = ["v7", "std", "serde"] }
winres = "0.1.12"
