[package]
name = "hmw-geo"
version = "0.1.0"
edition.workspace = true

[dependencies]
geo = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
ordered-float = { workspace = true }
map_3d = { workspace = true }
shapefile = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tinystr = { workspace = true }
geohash = { workspace = true }
arrow = { workspace = true }
arrow_convert = { workspace = true }
either = { workspace = true }
rayon = { workspace = true }
